setting up the strcuture in react native

--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.11",
+    "@react-navigation/native": "^7.1.7",
+    "@react-navigation/native-stack": "^7.3.11",
+    "axios": "^1.9.0",
     "expo": "~53.0.7",
+    "expo-av": "~15.1.4",
     "expo-status-bar": "~2.2.3",
+    "moti": "^0.30.0",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-toast-message": "^2.3.0",
+    "react-native-vector-icons": "^10.2.0",
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
