--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.11",
     "@react-navigation/native": "^7.1.7",
     "@react-navigation/native-stack": "^7.3.11",
+    "@tanstack/react-query": "^5.75.1",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "expo": "~53.0.7",
     "expo-av": "~15.1.4",
+    "expo-constants": "~17.1.5",
     "expo-status-bar": "~2.2.3",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
