--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.11",
     "@react-navigation/native": "^7.1.7",
     "@react-navigation/native-stack": "^7.3.11",
-    "@tanstack/react-query": "^5.75.1",
+    "@react-navigation/stack": "^7.3.0",
+    "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "expo": "~53.0.7",
     "expo-av": "~15.1.4",
     "expo-constants": "~17.1.5",
+    "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "moti": "^0.30.0",
-    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.25.0",
     "react-native-pager-view": "6.7.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
@@ -37,9 +37,12 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.27.1",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
+    "babel-preset-expo": "^13.1.11",
+    "nativewind": "^4.1.23",
     "react-native-dotenv": "^3.4.11",
     "typescript": "~5.8.3"
   },
