--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.3.0",
     "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
+    "babel-preset-expo": "~13.0.0",
     "dotenv": "^16.5.0",
     "expo": "~53.0.7",
     "expo-av": "~15.1.4",
@@ -28,7 +29,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.25.0",
     "react-native-pager-view": "6.7.1",
-    "react-native-reanimated": "^3.17.5",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
