--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
     "babel-preset-expo": "~13.0.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "expo": "~53.0.7",
     "expo-av": "~15.1.4",
@@ -24,6 +25,7 @@
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "moti": "^0.30.0",
+    "nativewind": "^2.0.11",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
@@ -35,6 +37,7 @@
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
@@ -43,7 +46,6 @@
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "babel-preset-expo": "^13.1.11",
-    "nativewind": "^4.1.23",
     "react-native-dotenv": "^3.4.11",
     "typescript": "~5.8.3"
   },
