--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.ts",
-    "build": "tsc",
+    "build": "tsc && npm run create-declarations",
+    "create-declarations": "mkdir -p dist/types && cp src/types/declarations.d.ts dist/types/",
     "postbuild": "cp -r prisma/schema.prisma dist/",
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
