--- a/server/.env.example
+++ b/server/.env.example
@@ -9,5 +9,10 @@ DATABASE_URL=your_database_url
 JWT_SECRET=your_jwt_secret_here
 JWT_EXPIRES_IN=7d
 
+# Cloudinary Config
+CLOUDINARY_CLOUD_NAME=cloudname
+CLOUDINARY_API_KEY=apikey
+CLOUDINARY_API_SECRET=cloudinary api secret
+
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
