--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.11",
     "@react-navigation/native": "^7.1.7",
     "@react-navigation/native-stack": "^7.3.11",
     "@react-navigation/stack": "^7.3.0",
+    "@tamagui/alert-dialog": "^1.126.12",
+    "@tamagui/babel-plugin": "^1.126.12",
+    "@tamagui/config": "^1.126.12",
+    "@tamagui/core": "^1.126.12",
     "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
     "babel-preset-expo": "~13.0.0",
@@ -27,6 +32,7 @@
     "moti": "^0.30.0",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.25.0",
@@ -38,7 +44,8 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "tamagui": "^1.126.12"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
