--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "~17.1.5",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "0.264.0",
     "moti": "^0.30.0",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
