--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "expo": "~53.0.7",
-    "expo-av": "~15.1.4",
+    "expo-av": "^15.1.4",
     "expo-constants": "~17.1.5",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
@@ -44,6 +44,8 @@
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.5",
+    "react-native-youtube-iframe": "^2.3.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "3.3.2",
     "tamagui": "^1.126.12"
