MAJOR: CHaing the font of the application and adding react native toasts after validation rather than alrt dialog

--- a/client/.tamagui/tamagui.config.json
+++ b/client/.tamagui/tamagui.config.json
@@ -27293,44 +27293,54 @@
   "tamaguiConfig": {
     "fonts": {
       "body": {
-        "family": "System",
+        "family": "DMSans",
+        "size": {
+          "1": 12,
+          "2": 14,
+          "3": 16,
+          "4": 18,
+          "5": 20,
+          "6": 24,
+          "7": 28,
+          "8": 32,
+          "9": 36,
+          "10": 40,
+          "11": 48,
+          "12": 56,
+          "13": 64,
+          "14": 72
+        },
         "lineHeight": {
-          "1": 21,
-          "2": 22,
-          "3": 23,
-          "4": 24,
-          "5": 26,
-          "6": 28,
-          "7": 30,
-          "8": 33,
-          "9": 40,
-          "10": 56,
-          "11": 65,
-          "12": 72,
-          "13": 82,
-          "14": 102,
-          "15": 124,
-          "16": 144,
-          "true": 24
+          "1": 16,
+          "2": 20,
+          "3": 24,
+          "4": 26,
+          "5": 30,
+          "6": 36,
+          "7": 40,
+          "8": 44,
+          "9": 48,
+          "10": 54,
+          "11": 62,
+          "12": 70,
+          "13": 78,
+          "14": 86
         },
         "weight": {
           "1": "300",
           "2": "300",
           "3": "300",
-          "4": "300",
-          "5": "300",
-          "6": "300",
-          "7": "300",
-          "8": "300",
-          "9": "300",
-          "10": "300",
-          "11": "300",
-          "12": "300",
-          "13": "300",
-          "14": "300",
-          "15": "300",
-          "16": "300",
-          "true": "300"
+          "4": "400",
+          "5": "400",
+          "6": "500",
+          "7": "600",
+          "8": "700",
+          "9": "700",
+          "10": "700",
+          "11": "700",
+          "12": "700",
+          "13": "700",
+          "14": "700"
         },
         "letterSpacing": {
           "1": 0,
@@ -27346,70 +27356,58 @@
           "11": 0,
           "12": 0,
           "13": 0,
-          "14": 0,
-          "15": 0,
-          "16": 0,
-          "true": 0
-        },
-        "size": {
-          "1": 11,
-          "2": 12,
-          "3": 13,
-          "4": 14,
-          "5": 16,
-          "6": 18,
-          "7": 20,
-          "8": 23,
-          "9": 30,
-          "10": 46,
-          "11": 55,
-          "12": 62,
-          "13": 72,
-          "14": 92,
-          "15": 114,
-          "16": 134,
-          "true": 14
+          "14": 0
         }
       },
       "heading": {
-        "family": "System",
+        "family": "Montserrat",
+        "size": {
+          "1": 12,
+          "2": 14,
+          "3": 16,
+          "4": 18,
+          "5": 20,
+          "6": 24,
+          "7": 28,
+          "8": 32,
+          "9": 36,
+          "10": 40,
+          "11": 48,
+          "12": 56,
+          "13": 64,
+          "14": 72
+        },
         "lineHeight": {
-          "1": 25.4,
-          "2": 26.799999999999997,
-          "3": 28.2,
-          "4": 29.599999999999998,
-          "5": 32.4,
-          "6": 35.2,
-          "7": 38,
-          "8": 42.199999999999996,
-          "9": 52,
-          "10": 74.39999999999999,
-          "11": 87,
-          "12": 96.8,
-          "13": 110.8,
-          "14": 138.79999999999998,
-          "15": 169.6,
-          "16": 197.6,
-          "true": 29.599999999999998
+          "1": 16,
+          "2": 20,
+          "3": 22,
+          "4": 24,
+          "5": 28,
+          "6": 32,
+          "7": 36,
+          "8": 40,
+          "9": 44,
+          "10": 48,
+          "11": 56,
+          "12": 64,
+          "13": 72,
+          "14": 80
         },
         "weight": {
-          "1": "300",
-          "2": "300",
-          "3": "300",
-          "4": "300",
-          "5": "300",
-          "6": "300",
-          "7": "300",
-          "8": "300",
-          "9": "300",
-          "10": "300",
-          "11": "300",
-          "12": "300",
-          "13": "300",
-          "14": "300",
-          "15": "300",
-          "16": "300",
-          "true": "300"
+          "1": "400",
+          "2": "400",
+          "3": "400",
+          "4": "400",
+          "5": "400",
+          "6": "400",
+          "7": "400",
+          "8": "400",
+          "9": "400",
+          "10": "400",
+          "11": "400",
+          "12": "400",
+          "13": "400",
+          "14": "400"
         },
         "letterSpacing": {
           "1": 0,
@@ -27425,29 +27423,7 @@
           "11": 0,
           "12": 0,
           "13": 0,
-          "14": 0,
-          "15": 0,
-          "16": 0,
-          "true": 0
-        },
-        "size": {
-          "1": 15.399999999999999,
-          "2": 16.799999999999997,
-          "3": 18.2,
-          "4": 19.599999999999998,
-          "5": 22.4,
-          "6": 25.2,
-          "7": 28,
-          "8": 32.199999999999996,
-          "9": 42,
-          "10": 64.39999999999999,
-          "11": 77,
-          "12": 86.8,
-          "13": 100.8,
-          "14": 128.79999999999998,
-          "15": 159.6,
-          "16": 187.6,
-          "true": 19.599999999999998
+          "14": 0
         }
       }
     },
