--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,17 @@
     "@tamagui/babel-plugin": "^1.126.12",
     "@tamagui/config": "^1.126.12",
     "@tamagui/core": "^1.126.12",
+    "@tamagui/toast": "^1.126.12",
     "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
     "babel-preset-expo": "~13.0.0",
+    "burnt": "^0.13.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "expo": "~53.0.7",
     "expo-av": "^15.1.4",
     "expo-constants": "~17.1.5",
+    "expo-font": "~13.3.1",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "0.264.0",
