minor: changing font

--- a/client/.tamagui/tamagui.config.json
+++ b/client/.tamagui/tamagui.config.json
@@ -27293,7 +27293,7 @@
   "tamaguiConfig": {
     "fonts": {
       "body": {
-        "family": "DMSans",
+        "family": "GilroyRegular",
         "size": {
           "1": 12,
           "2": 14,
@@ -27360,7 +27360,7 @@
         }
       },
       "heading": {
-        "family": "Montserrat",
+        "family": "GilroySemiBold",
         "size": {
           "1": 12,
           "2": 14,
@@ -27394,20 +27394,20 @@
           "14": 80
         },
         "weight": {
-          "1": "400",
-          "2": "400",
-          "3": "400",
-          "4": "400",
-          "5": "400",
-          "6": "400",
-          "7": "400",
-          "8": "400",
-          "9": "400",
-          "10": "400",
-          "11": "400",
-          "12": "400",
-          "13": "400",
-          "14": "400"
+          "1": "600",
+          "2": "600",
+          "3": "600",
+          "4": "600",
+          "5": "600",
+          "6": "600",
+          "7": "600",
+          "8": "600",
+          "9": "600",
+          "10": "600",
+          "11": "600",
+          "12": "600",
+          "13": "600",
+          "14": "600"
         },
         "letterSpacing": {
           "1": 0,
