--- a/server/.env.example
+++ b/server/.env.example
@@ -8,7 +8,7 @@ DATABASE_URL=your_database_url
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_here
 JWT_EXPIRES_IN=7d
-
+REFRESH_SECRET = your_refresh_secret_key_here
 # Cloudinary Config
 CLOUDINARY_CLOUD_NAME=cloudname
 CLOUDINARY_API_KEY=apikey
